--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "04-ignite-shop",
+  "name": "ignite-shop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@stitches/react": "^1.2.8",
-    "axios": "^0.27.2",
-    "keen-slider": "^6.7.0",
-    "next": "12.2.5",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.3",
+    "next": "13.4.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "stripe": "^10.6.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.7.13",
-    "@types/react": "^18.0.17",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
-    "typescript": "^4.7.4"
+    "@types/node": "^20.2.3",
+    "@types/react": "^18.2.6",
+    "typescript": "^5.0.4"
   }
 }
